add styles test to ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,10 @@ jobs:
 
       - name: "API Tests"
         run: go test -cover ./...
+
+    name: Styles
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Styles"
+        run: test -z $(go fmt ./...)
