--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
           go-version: "1.23.0"
 
       - name: "Style"
-        run: go test -cover ./...
+        run: test -z $(go fmt ./...)
